<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.reminder.DetailReminderActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColorHint="#c5c5c5">
            <EditText
                android:id="@+id/et_reminder_title"
                android:inputType="textCapWords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_reminder_title"
                android:enabled="false"
                android:textColor="@color/edittextselectorcolor" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColorHint="#c5c5c5">
            <EditText
                android:id="@+id/et_reminder_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_reminder_description"
                android:enabled="false"
                android:textColor="@color/edittextselectorcolor"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColorHint="#c5c5c5">
            <EditText
                android:id="@+id/et_reminder_yes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_reminder_yes"
                android:enabled="false"
                android:textColor="@color/edittextselectorcolor"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColorHint="#c5c5c5">
            <EditText
                android:id="@+id/et_reminder_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_reminder_no"
                android:enabled="false"
                android:textColor="@color/edittextselectorcolor"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>