<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/coordinator">

    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="70dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/goparlogo1"/>

            <EditText
                android:id="@+id/username"
                android:layout_below="@id/img_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="70dp"
                android:singleLine="true"
                android:paddingLeft="10dp"
                android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                android:drawablePadding="15dp"
                android:hint="@string/username"
                android:textColor="@color/grey_800"
                android:textColorHint="@color/grey_500"
                android:background="@drawable/bg_input"/>

            <EditText
                android:id="@+id/password"
                android:layout_below="@id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="25dp"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:drawablePadding="15dp"
                android:hint="@string/password"
                android:textColor="@color/grey_800"
                android:textColorHint="@color/grey_500"
                android:background="@drawable/bg_input"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_below="@id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_btn"
                android:text="@string/btn_login"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:layout_marginTop="50dp" />

            <LinearLayout
                android:id="@+id/ll_no_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_800"
                    android:text="@string/dont_have_account"/>

                <TextView
                    android:id="@+id/txt_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:textColor="@color/grey_800"
                    android:textStyle="bold"
                    android:text="Daftar"/>
            </LinearLayout>
        </RelativeLayout>
    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>