<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinator"
    android:background="@drawable/bg_login">

    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/owl"/>

            <EditText
                android:id="@+id/name"
                android:layout_below="@id/img_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="50dp"
                android:singleLine="true"
                android:paddingLeft="10dp"
                android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                android:drawablePadding="15dp"
                android:hint="@string/name"
                android:textColor="@color/white"
                android:textColorHint="@color/purple_100"
                android:background="@drawable/bg_input"/>

            <EditText
                android:id="@+id/username"
                android:layout_below="@id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                android:drawablePadding="15dp"
                android:hint="@string/username"
                android:textColor="@color/white"
                android:textColorHint="@color/purple_100"
                android:background="@drawable/bg_input"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/username"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:id="@+id/rl_password">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:drawableLeft="@drawable/ic_lock_black_24dp"
                    android:drawablePadding="15dp"
                    android:hint="@string/password"
                    android:textColor="@color/white"
                    android:textColorHint="@color/purple_100"
                    android:background="@drawable/bg_input"/>

                <ImageView
                    android:id="@+id/img_visibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_visibility_black_24dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="8dp"/>

                <ImageView
                    android:id="@+id/img_invisibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_visibility_off_black_24dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:visibility="gone"
                    android:layout_marginRight="8dp"/>

            </RelativeLayout>


            <Button
                android:id="@+id/btn_register"
                android:layout_below="@id/rl_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_login"
                android:text="@string/btn_register"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:layout_marginTop="50dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/have_account"/>

                <TextView
                    android:id="@+id/txt_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="Login"/>
            </LinearLayout>
        </RelativeLayout>
    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>