<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_user_time_upload"
                    android:textColor="@android:color/black"
                    android:text="@string/text_tips_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_reminder_title"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/text_reminder_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_reminder_description"
                android:text="@string/text_reminder_description"
                android:ellipsize="end"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="20dp"
                android:maxLines="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_reminder_yes"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/colorGreen500"
                android:text="Ya"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="30dp" />
            <Button
                android:id="@+id/btn_reminder_no"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:background="@color/colorRed500"
                android:text="Tidak"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="30dp" />
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>